# CodenameEpitome

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
assets/: README.md
include/: Ability.hpp  AchievementManager.hpp  Dungeon.hpp  Enemy.hpp  Entity.hpp  Game.hpp  Pathfinding.hpp  Player.hpp  Projectile.hpp  SpriteManager.hpp  UI.hpp  Utils.hpp  Weapon.hpp
src/: Ability.cpp  AchievementManager.cpp  Dungeon.cpp  Enemy.cpp  Game.cpp  Pathfinding.cpp  Player.cpp  Projectile.cpp  SpriteManager.cpp  UI.cpp  Weapon.cpp  main.cpp
